--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ Desktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
+*.sln.ide/*
+bin/
+obj/
+packages/
+*.suo
 
 # Windows Installer files
 *.cab
